<resources>
    <string name="app_name">泰金所</string>
    <string name="text_cancel">取消</string>
    <string name="text_confirm">确定</string>
    <string name="text_confirm2">确认</string>
    <string name="text_close">关闭</string>
    <string name="text_no_data">当前没有数据</string>
    <string name="text_no_data_default">- - -</string>
    <string name="text_money_unit">元</string>
    <string name="text_amount_unit">手</string>
    <string name="text_submit">提交</string>
    <string name="text_tip">提示</string>
    <string name="text_tips">操作提示</string>
    <string name="text_login">登录</string>
    <string name="text_next">下一步</string>
    <string name="text_message_notlogin">很抱歉，您还未登录</string>
    <string name="text_wechat_uninstalled">您还没有安装微信，请先进行安装！</string>
    <string name="text_more">多</string>
    <string name="text_empty">空</string>
    <string name="text_save">保存</string>
    <string name="dialog_title">操作提示</string>
    <string name="main_exit_app">再按一次退出程序</string>
    <string name="main_title">泰金所</string>
    <string name="main_page">首页</string>
    <string name="main_market">行情</string>
    <string name="main_trade">交易</string>
    <string name="main_personal">我的</string>
    <string name="main_protocol_update_title">关于平台协议更新的通知</string>
    <string name="main_protocol_update_message">尊敬的用户：\n
     &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;即日起， 关于本平台的相关协议中部分条款进行了更新，具体的更新内容详见以下相关协议，本平台对此次协议更新内容保留最终解释权。</string>
    <string name="main_protocol_update_agree">我已阅读并同意以上协议</string>
    <string name="main_protocol">《%1$s》</string>
    <string name="main_protocol_update_success">协议更新成功</string>
    <string name="main_statement">隐私政策与声明</string>
    <string name="main_statement_title">欢迎您使用泰金所APP！</string>
    <string name="main_statement_message">在您使用本应用之前您需要阅读并同意以下条款及协议内容，请您务必仔细阅读、充分理解协议中的条款内容后再点击同意。</string>
    <string name="main_statement_agreement_privacy">《隐私条款》</string>
    <string name="main_statement_agreement_use">《用户使用协议》</string>
    <string name="main_statement_agreement_responsibility">《免责声明》</string>
    <string name="main_statement_refuse">拒绝</string>
    <string name="main_statement_agree">同意并继续</string>
    <string name="version_need_install">您使用的版本过低，请安装新版本后使用</string>
    <string name="version_need_update">您使用的版本过低，请升级新版本后使用</string>
    <string name="version_install">立即安装</string>
    <string name="version_update">立即更新</string>
    <string name="version_wait_soon">稍后再说</string>
    <string name="version_wait">暂不更新</string>
    <string name="version_error">您所下载的APP解析错误，请重新下载更新</string>
    <string name="version_download_progress">正在下载更新</string>
    <string name="version_new">发现新版本可以安装</string>
    <string name="version_new_update">发现新版本可以更新</string>
    <string name="version_download_error2">下载更新失败！重新下载新版本吗?</string>
    <string name="version_download_error3">下载更新失败！您使用的版本过低，请重新下载新版本后使用</string>
    <string name="version_download_ing">下载中...</string>
    <string name="version_download_error">下载失败</string>
    <string name="version_current_new">您当前使用的是最新版本!</string>
    <string name="version_network_error">网络加载失败，请检查！</string>
    <string name="version_newest">当前版本为最新版本！</string>
    <string name="version_find_newest">发现新版本</string>
    <string name="main_page_beginners">新手学堂</string>
    <string name="main_tab_strategy">策略</string>
    <string name="market_contract">合约</string>
    <string name="market_last_price">最新价</string>
    <string name="market_range">涨跌幅</string>
    <string name="market_volume">成交量</string>
    <string name="market_declaration_form">报单</string>
    <string name="market_one_key_order">一键下单</string>
    <string name="market_open">今开</string>
    <string name="market_preclose">昨收</string>
    <string name="market_turn_volume">成交额</string>
    <string name="market_high">最高</string>
    <string name="market_low">最低</string>
    <string name="market_limit_up">涨停</string>
    <string name="market_limit_down">跌停</string>
    <string name="market_rival_price">对手价</string>
    <string name="market_price_hint">价格</string>
    <string name="market_amount_hint">数量</string>
    <string name="market_buy_more">买多</string>
    <string name="market_sale_empty">卖空</string>
    <string name="market_equal_more">平多</string>
    <string name="market_equal_empty">平空</string>
    <string name="market_warning">预警</string>
    <string name="market_judgment">行情研判</string>
    <string name="market_judgment_result">研判结果</string>
    <string name="market_interpret">详细解读</string>
    <string name="market_edit_sort">编辑排序</string>
    <string name="market_edit_sort_message">长按拖动排序</string>
    <string name="market_edit_sort_success">排序成功</string>
    <string name="transaction_place_order">下单</string>
    <string name="transaction_hold_positions">持仓</string>
    <string name="transaction_varieties">交易品种</string>
    <string name="transaction_limit_up_price">涨停</string>
    <string name="transaction_limit_down_price">跌停</string>
    <string name="transaction_market">5档行情</string>
    <string name="transaction_entrust_price">委托价格</string>
    <string name="transaction_entrust_hands_number">委托手数</string>
    <string name="transaction_latest">最新</string>
    <string name="transaction_max_order_number">单笔最大下单量：</string>
    <string name="transaction_money_error">您的可用资金不足</string>
    <string name="transaction_money_in">入金</string>
    <string name="transaction_money_out">出金</string>
    <string name="transaction_turnover">流水</string>
    <string name="transaction_success">报单成功</string>
    <string name="transaction_evening_up_success">下单成功</string>
    <string name="transaction_limit_down_price_error">您的价格低于跌停价</string>
    <string name="transaction_limit_up_price_error">您的价格高于涨停价</string>
    <string name="transaction_number_error_zero">您的数量必须大于0</string>
    <string name="transaction_limit_min_amount_error">您的数量低于单笔最低交易数量</string>
    <string name="transaction_limit_max_amount_error2">您的数量高于最大持仓量</string>
    <string name="transaction_limit_max_amount_error">您的数量高于单笔最高交易数量</string>
    <string name="transaction_contract_error">请选择报单合约</string>
    <string name="transaction_price_error">请输入价格</string>
    <string name="transaction_number_error">请输入数量</string>
    <string name="transaction_buy_more_confirm">买多报单确认</string>
    <string name="transaction_sale_empty_confirm">卖空报单确认</string>
    <string name="transaction_buy_open">买入开仓</string>
    <string name="transaction_sale_open">卖出开仓</string>
    <string name="transaction_amount_unit">%1$s手</string>
    <string name="transaction_popupwindow_account">黄金账号</string>
    <string name="transaction_popupwindow_contract_code">合约代码</string>
    <string name="transaction_popupwindow_entrust_price">委托价格</string>
    <string name="transaction_popupwindow_entrust_amount">委托数量</string>
    <string name="transaction_popupwindow_entrust_varieties">委托品种</string>
    <string name="transaction_popupwindow_type">交易类型</string>
    <string name="transaction_popupwindow_time">交易时间</string>
    <string name="transaction_popupwindow_trade_price">交易价格</string>
    <string name="transaction_popupwindow_surplus_amount">剩余数量</string>
    <string name="transaction_popupwindow_trade_status">交易状态</string>
    <string name="transaction_create_condition_sheet">创建条件单</string>
    <string name="transaction_hidden_value">****</string>
    <string name="transaction_total_equity">总权益(元)</string>
    <string name="transaction_floating">浮动盈亏(元)</string>
    <string name="transaction_floating_title">浮动盈亏</string>
    <string name="transaction_available_funds">可用资金(元)</string>
    <string name="transaction_desirable_capital">可取资金(元)</string>
    <string name="transaction_market_capitalization">持仓保证金(元)</string>
    <string name="transaction_guarantee_fund_title">保底资金</string>
    <string name="transaction_guarantee_fund">保底资金(元)</string>
    <string name="transaction_risk_rate">风险率</string>
    <string name="transaction_deal_query">成交查询</string>
    <string name="transaction_inoutmoney">出入金</string>
    <string name="transaction_entrust_risk_management">委托风控</string>
    <string name="transaction_daily_statement_sheet">日结单</string>
    <string name="transaction_condition_sheet">条件单</string>
    <string name="transaction_current_positions">当前持仓</string>
    <string name="transaction_current_entrust">当日委托</string>
    <string name="transaction_average_price">持仓均价</string>
    <string name="transaction_amount">持仓数量</string>
    <string name="transaction_amount_available">可用数量</string>
    <string name="transaction_stop">止盈止损</string>
    <string name="transaction_current_guarantee_fund">当前保底资金(元)</string>
    <string name="transaction_current_guarantee_fund_to_be_effective">待生效保底资金(元)</string>
    <string name="transaction_current_guarantee_fund_to_be_effective_tips">将于修改后的下一个交易日生效</string>
    <string name="transaction_goto_setting">去设置</string>
    <string name="transaction_setting">设置</string>
    <string name="transaction_modify">修改</string>
    <string name="transaction_current_guarantee_setting">保底资金设置</string>
    <string name="transaction_input_money">请输入金额</string>
    <string name="transaction_guarantee_total_error">总权益金额异常</string>
    <string name="transaction_guarantee_fund_success">保底资金设置成功</string>
    <string name="transaction_guarantee_fund_message0">保底金额设置为0后，系统将不再进行风险率监控，请确认是否继续？</string>
    <string name="transaction_guarantee_fund_message1">尊敬的客户，您暂未设置保底金额，请注意交易风险。</string>
    <string name="transaction_guarantee_fund_message2">您设置该保底金额后当前风险率为%1$s，低于平仓线，系统将触发保底平仓，是否继续设置？</string>
    <string name="transaction_guarantee_fund_message3">您设置该保底金额后当前风险率为%1$s，低于预警线，系统将限制开仓，是否继续设置？</string>
    <string name="transaction_guarantee_fund_message4">您设置该保底金额后当前风险率为%1$s，是否继续设置？</string>
    <string name="transaction_guarantee_fund_message5">您设置的保底金额超过当前总权益，将会触发平仓或无法开仓，是否继续设置？</string>
    <string name="transaction_guarantee_fund_message6">您当前输入的保底资金未做修改，请重新输入</string>
    <string name="transaction_guarantee_fund_message">1、 委托风控是系统为用户提供的风险控制功能，用户设置保底金额后，系统实时监控用户交易的风险率，当风险率触发设定的预警线或平仓线时，系统将限制用户开仓或者发起平仓指令，防止用户产生超预期亏损，及时保障用户的资金权益。\n \n
        2、风险率=客户总权益/保底金额*%1$s。 \n \n
        3、预警线：%2$s，即当风险率&#060;预警线时，系统将限制客户开仓，并对客户进行预警提示。\n \n
        4、平仓线：%3$s，即当风险率&#060;平仓线时，系统将自动发起平仓指令，进行平仓操作，防止用户产生超预期亏损，及时保障用户的资金权益。\n \n
        5、委托风控在设置后的下一个交易日生效，在生效前可修改。</string>
    <string name="transaction_riskrate_rule">风险率=客户总权益/保底金额*%1$s</string>
    <string name="transaction_query">历史查询</string>
    <string name="transaction_today_deal">今日成交</string>
    <string name="transaction_historical_deal">历史成交</string>
    <string name="transaction_historical_entrust">历史委托</string>
    <string name="transaction_contract_time">合约/时间</string>
    <string name="transaction_type">类型</string>
    <string name="transaction_amount_dealprice">数量/成交价</string>
    <string name="transaction_start_time">起始时间</string>
    <string name="transaction_cancel_order">撤单</string>
    <string name="trading_box_detail">查看详情</string>
    <string name="trading_box_function_share">分享</string>
    <string name="trading_box_function_history">历史匣子</string>
    <string name="trading_box_function_order">我的订单</string>
    <string name="trading_box_function_introduction">使用攻略</string>
    <string name="trading_box_function_question">常见问题</string>
    <string name="trading_box_entrust_contract">委托交易品种</string>
    <string name="trading_box_entrust_direction">委托方向</string>
    <string name="trading_box_share_title">请选择分享平台</string>
    <string name="trading_box_share_wechat">微信</string>
    <string name="trading_box_share_wechat_circle">微信朋友圈</string>
    <string name="trading_box_share_qq">QQ</string>
    <string name="trading_box_share_cancel">取消分享</string>
    <string name="increment_recharge_pay">去支付</string>
    <string name="increment_arrears">您当前有服务费未缴纳，请结清后再使用该服务</string>
    <string name="increment_arrears_pay">您当前有服务费未缴纳，您可以主动结清费用后再使用，或者关闭增值服务后进行交易。</string>
    <string name="increment_arrears_pay_close_increment">关闭增值服务</string>
</resources>