<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handlers"
            type="com.jme.lsgoldtrade.view.StatementPopupWindow.ClickHandlers" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_statement_title"
            android:background="@color/color_blue_deep"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/common_area_margin"
                android:text="@string/main_statement"
                android:textColor="@color/white"
                android:textSize="@dimen/size_riskrate" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/common_area_margin_middle"
                android:background="@mipmap/ic_shield" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/common_area_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_statement_title"
                android:textColor="@color/black_deep"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_middle"
                android:layout_marginBottom="@dimen/common_area_margin_tiny"
                android:lineSpacingExtra="@dimen/lineSpacingExtra_normal"
                android:text="@string/main_statement_message"
                android:textColor="@color/black_deep"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <include layout="@layout/item_line_vertical" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/common_area_margin"
            android:layout_marginTop="@dimen/common_area_margin_big"
            android:layout_marginRight="@dimen/common_area_margin"
            android:layout_marginBottom="@dimen/common_area_margin_big"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_tiny"
                android:onClick="@{() -> handlers.onClickAgreementPrivacy()}"
                android:text="@string/main_statement_agreement_privacy"
                android:textColor="@color/color_blue_deep"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_tiny"
                android:layout_marginRight="@dimen/margin_tiny"
                android:onClick="@{() -> handlers.onClickAgreementUse()}"
                android:text="@string/main_statement_agreement_use"
                android:textColor="@color/color_blue_deep"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_tiny"
                android:onClick="@{() -> handlers.onClickAgreementResponsibility()}"
                android:text="@string/main_statement_agreement_responsibility"
                android:textColor="@color/color_blue_deep"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_login_btn"
            android:layout_marginLeft="@dimen/common_area_margin"
            android:layout_marginRight="@dimen/common_area_margin"
            android:layout_marginBottom="@dimen/common_area_margin_large"
            android:background="@drawable/selector_btn"
            android:onClick="@{() -> handlers.onClickAgree()}"
            android:text="@string/main_statement_agree"
            android:textColor="@color/white"
            android:textSize="@dimen/common_font_size" />

    </LinearLayout>

</layout>
