<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_background"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar" />

        <include layout="@layout/item_line_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_tabhost"
            android:background="@color/color_bg_img"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/common_area_margin"
            android:paddingRight="@dimen/common_area_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                android:text="@string/trading_box_entrust_contract"
                android:textColor="@color/color_text_normal"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/trading_box_entrust_direction"
                android:textColor="@color/color_text_normal"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/transaction_popupwindow_entrust_amount"
                android:textColor="@color/color_text_normal"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/transaction_cancel_order"
                android:textColor="@color/color_text_normal"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:text="@string/trading_box_detail"
                android:textColor="@color/color_text_normal"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

        <include layout="@layout/item_line_vertical_list" />

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.scwang.smartrefresh.layout.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cacheColorHint="@null"
                android:scrollbars="none" />

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    </LinearLayout>

</layout>
