<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/common_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/common_area_margin"
            android:paddingBottom="@dimen/common_area_margin"
            android:text="@string/trading_box_share_title"
            android:textColor="@color/black_pale"
            android:textSize="@dimen/sp_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_area_margin_big"
            android:layout_marginRight="@dimen/common_area_margin_big"
            android:layout_marginBottom="@dimen/common_page_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_wechat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/trading_box_share_wechat"
                android:drawableTop="@mipmap/ic_share_wechat"
                android:textColor="@color/black_pale"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_wechat_circle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/trading_box_share_wechat_circle"
                android:drawableTop="@mipmap/ic_share_wechat_circle"
                android:textColor="@color/black_pale"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_qq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/trading_box_share_qq"
                android:visibility="gone"
                android:drawableTop="@mipmap/ic_share_qq"
                android:textColor="@color/black_pale"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

        <include layout="@layout/item_line_vertical_list" />

        <TextView
            android:id="@+id/tv_cancel_share"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_amount"
            android:background="@color/white"
            android:gravity="center"
            android:paddingTop="@dimen/common_area_margin_tiny"
            android:paddingBottom="@dimen/common_area_margin_tiny"
            android:text="@string/trading_box_share_cancel"
            android:textColor="@color/color_text_normal"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

</RelativeLayout>