<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_item_normal"
            android:gravity="center"
            android:text="@string/text_tips"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/sp_16" />

        <include layout="@layout/item_line_vertical" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_normal"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/sp_14" />

        <include layout="@layout/item_line_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_item_normal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/text_cancel"
                android:textColor="@color/black_deep"
                android:textSize="@dimen/sp_16" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_blue"
                android:text="@string/text_confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

    </LinearLayout>

</layout>
